data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_956.wast
;; 7. **Test 7: `br` Out of Function with Different Parameter Count**    - **Description:** Implement a function call with a parameter count not matching the operand stack state after a `br` instruction. Ensure proper error trapping or successful execution.    - **Reasoning:** Tests if the `br` instruction correctly adapts to operand counts when exiting a function.

(assert_invalid
  (module
    (func $test-br-out-of-function-with-parameter-count
      (block (result i32 i32)
        (i32.const 42)
        (br 0)
      )
    )
  )
  "type mismatch"
)